--- a/front_end/public/index.html
+++ b/front_end/public/index.html
@@ -23,12 +23,14 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>React App</title>
+  <!-- <script src="//dapi.kakao.com/v2/maps/sdk.js?autoload=false&appkey=%REACT_APP_KAKAO_MAP_KEY%"></script> -->
   <!-- <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=559d8c54848893d807d4582bc014357b"></script> -->
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
+
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
