우선 잘 동작되는 지도.

--- a/front_end/public/index.html
+++ b/front_end/public/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 
 <head>
+  <script type="text/javascript"
+    src="//dapi.kakao.com/v2/maps/sdk.js?appkey=79ca9d50ec5b44afee5b11a1c19903d1&libraries=services"></script>
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/volunteer.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -23,8 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>React App</title>
-  <!-- <script src="//dapi.kakao.com/v2/maps/sdk.js?autoload=false&appkey=%REACT_APP_KAKAO_MAP_KEY%"></script> -->
-  <!-- <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=559d8c54848893d807d4582bc014357b"></script> -->
+  <script src="//dapi.kakao.com/v2/maps/sdk.js?autoload=false&appkey=%REACT_APP_KAKAO_MAP_KEY%"></script>
 </head>
 
 <body>
