--- a/front_end/public/index.html
+++ b/front_end/public/index.html
@@ -23,7 +23,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>React App</title>
-  <script src="//dapi.kakao.com/v2/maps/sdk.js?autoload=false&appkey=%REACT_APP_KAKAO_MAP_KEY%"></script>
+  <script src="//dapi.kakao.com/v2/maps/sdk.js?autoload=true&appkey=416d139f7887a149012a0372cafa62e2"></script>
 </head>
 
 <body>
