--- a/front_end/public/index.html
+++ b/front_end/public/index.html
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React App</title>
+  <title>SIM BONG SA</title>
   <script id="kakaomap" type="text/javascript"
     src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAO_MAP_KEY%&autoload=true&libraries=clusterer"></script>
 </head>
